<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_radius"
    android:padding="@dimen/widget_margin"
    android:theme="@style/ThemeOverlay.ManazerFinancii.AppWidgetContainer">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/background_radius"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/widget_mesiacN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/filter_mesiac"
                android:textColor="@color/lightblack"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/widget_prijmyN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/text_prijmy"
                android:textColor="@color/lightblack"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/widget_vydavkyN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/text_vydavky"
                android:textColor="@color/lightblack"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/widget_spoluN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/text_celkom"
                android:textColor="@color/lightblack"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/widget_mesiac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/widget_prijmy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textColor="@color/green" />

            <TextView
                android:id="@+id/widget_vydavky"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textColor="@color/red" />

            <TextView
                android:id="@+id/widget_spolu"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>