<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightGray"
        tools:context=".grafickeRozhrania.SetrenieFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/pridanie_setrenie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/background_radius">

        <EditText
            android:id="@+id/pridanies_nazov"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="Názov"
            android:inputType="textPersonName"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/pridanies_n"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/pridanies_n" />

        <TextView
            android:id="@+id/pridanies_n"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/prid_nazov"
            android:textColor="@color/lightblack"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/pridanies_p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/prid_popis"
            android:textColor="@color/lightblack"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/pridanies_n"
            app:layout_constraintTop_toTopOf="@+id/pridanies_popis" />

        <EditText
            android:id="@+id/pridanies_popis"
            android:layout_width="212dp"
            android:layout_height="108dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="Popis"
            android:inputType="textMultiLine"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="@+id/pridanies_nazov"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/pridanies_nazov"
            app:layout_constraintTop_toBottomOf="@+id/pridanies_nazov" />

        <TextView
            android:id="@+id/pridanies_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/prid_suma"
            android:textColor="@color/lightblack"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/pridanies_p"
            app:layout_constraintTop_toBottomOf="@+id/pridanies_popis" />

            <EditText
                android:id="@+id/pridanies_suma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/prid_suma"
                android:inputType="numberDecimal|numberSigned"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/pridanies_s"
                app:layout_constraintEnd_toEndOf="@+id/pridanies_popis"
                app:layout_constraintStart_toStartOf="@+id/pridanies_popis"
                app:layout_constraintTop_toTopOf="@+id/pridanies_s" />

            <Button
                android:id="@+id/pridanies_tlacidlo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:background="@color/color_primary"
                android:text="@string/prid_button"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pridanies_suma" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>